# algo1_excercises

./: Clase01.cpp  Clase03.cpp  Práctica 5  README.md  practica8.cpp  practica9.cpp
Clase04Online/: main.cpp  vectores.cpp
Clase05/: ejercicios.cpp  main.cpp
Clase06 Ciclos con Invariantes/: ejercicios.cpp
Clase07/ej1/Test/: puntajeTEST.cpp
Clase07/ej2/Test/: llenarTaxisTEST.cpp
Clase07/ej3/: electores.cpp
Clase07/ej3/Test/: electoresTEST.cpp
Clase08/: ejercicios.h  main.cpp
Clase08 Matrices y Tableros/: CMakeLists.txt
Clase09 TDD/src/: ejemplo.cpp  ejemplo.h
Clase09TDD/: main.cpp
Clase09TDD/test/: testEjemplo.cpp
Clase10/: CMakeLists.txt
Clase10 Strings/src/: ejercicios.cpp
Clase10/src/: ejercicios.h
Clase11 Búsqueda y Ordenamiento/sorting/anagramas/src/: anagramas.h
Clase11 Búsqueda y Ordenamiento/sorting/bin-package/src/: ejercicios.h
Clase11/searching/: ejercicios.cpp
Clase11/searching/tests/: buscarTEST.cpp  indicePicoTEST.cpp
Clase11/sorting/anagramas/src/: main.cpp
Clase11/sorting/bin-package/src/: CMakeLists.txt  main.cpp
L04-vectores_y_ES_por_archivos/: vectores.h
L07-testing/: CMakeLists.txt
L07-testing/ej1/Test/: esPrimoTest.cpp
L07-testing/ej3/: baldosasDelPiso.cpp
L07-testing/ej3/Test/: baldosasDelPisoTEST.cpp
L08-matrices_y_tableros/: ejercicios.cpp
L09-TDD/: CMakeLists.txt
L11-búsqueda_y_Ordenamiento/searching/: ejercicios.h
